--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -37,8 +37,9 @@ jobs:
         NODE_AUTH_TOKEN: ${{ secrets.NPMJS_PUBLISH_TOKEN }}
     - name: Create Pull Request
       uses: peter-evans/create-pull-request@v2
+      env:
+        GITHUB_TOKEN: ${{ secrets.REPO_SCOPED_TOKEN }}
       with:
-        token: ${{ secrets.GITHUB_TOKEN }}
         base: master
         commit-message: Version ${{ env.VERSION }}
         committer: GitHub action executed on release <noreply@github.com>
