--- a/package.json
+++ b/package.json
@@ -23,7 +23,11 @@
     "test:circular": "dpdm --warning false --tree false src/index.ts | grep 'no circular dependency were found'",
     "test:watch": "react-scripts test --env=jsdom",
     "lint": "eslint src/**/*.{tsx,ts} --color --fix",
-    "prettier": "prettier --write '**/*.{js,jsx,ts,tsx,json,md,scss,yaml,yml}'"
+    "prettier": "prettier --write '**/*.{js,jsx,ts,tsx,json,md,scss,yaml,yml}'",
+    "update-api": "curl https://raw.githubusercontent.com/filanov/bm-inventory/master/swagger.yaml > src/api/swagger.yaml",
+    "postupdate-api": "yarn swagger",
+    "swagger": "sw2dts -w -o src/api/types.ts src/api/swagger.yaml",
+    "postswagger": "sed -i -r 's/([a-z1-9]+)_([a-z])/\\1\\U\\2/g' src/api/types.ts && yarn prettier"
   },
   "peerDependencies": {
     "@patternfly/patternfly": "^4.10.31",
@@ -84,6 +88,7 @@
     "npm-run-all": "^4.1.5",
     "prettier": "^2.0.4",
     "react-scripts": "^3.4.1",
+    "sw2dts": "^2.6.3",
     "typescript": "^3.8.3"
   },
   "files": [
