--- a/package.json
+++ b/package.json
@@ -37,17 +37,7 @@
     "@patternfly/react-tokens": "^4.4.4",
     "@reduxjs/toolkit": "^1.3.5",
     "@tippy.js/react": "^3.1.1",
-    "@types/file-saver": "^2.0.1",
-    "@types/human-date": "^1.4.0",
-    "@types/humanize-plus": "^1.8.0",
-    "@types/lodash": "^4.14.121",
-    "@types/netmask": "^1.0.30",
-    "@types/react-redux": "^7.1.7",
-    "@types/react-router-dom": "^5.1.3",
-    "@types/uuid": "^8.0.0",
-    "@types/yup": "^0.26.9",
     "axios": "^0.19.2",
-    "axios-case-converter": "^0.6.0",
     "file-saver": "^2.0.2",
     "formik": "^2.1.4",
     "http-proxy-middleware": "^1.0.3",
@@ -89,7 +79,16 @@
     "prettier": "^2.0.4",
     "react-scripts": "^3.4.1",
     "sw2dts": "^2.6.3",
-    "typescript": "^3.8.3"
+    "typescript": "^3.8.3",
+    "@types/file-saver": "^2.0.1",
+    "@types/human-date": "^1.4.0",
+    "@types/humanize-plus": "^1.8.0",
+    "@types/lodash": "^4.14.121",
+    "@types/netmask": "^1.0.30",
+    "@types/react-redux": "^7.1.7",
+    "@types/react-router-dom": "^5.1.3",
+    "@types/uuid": "^8.0.0",
+    "@types/yup": "^0.26.9"
   },
   "files": [
     "dist"
@@ -100,6 +99,7 @@
     "library"
   ],
   "dependencies": {
-    "unique-names-generator": "^4.2.0"
+    "unique-names-generator": "^4.2.0",
+    "axios-case-converter": "^0.6.0"
   }
 }
