--- a/package.json
+++ b/package.json
@@ -47,8 +47,7 @@
     "prism-react-renderer": "^1.1.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-redux": "^7.2.0",
-    "react-router-dom": "^5.1.2",
+    "react-router-dom": "4.3.1",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
     "redux-thunk": "^2.3.0",
@@ -68,7 +67,7 @@
     "@types/netmask": "^1.0.30",
     "@types/node": "^12.12.38",
     "@types/react-redux": "^7.1.7",
-    "@types/react-router-dom": "^5.1.3",
+    "@types/react-router-dom": "4.3.1",
     "@types/uuid": "^8.0.0",
     "@types/yup": "^0.26.9",
     "@typescript-eslint/eslint-plugin": "^2.26.0",
@@ -100,6 +99,7 @@
   ],
   "dependencies": {
     "axios-case-converter": "^0.6.0",
+    "react-redux": "^7.2.0",
     "unique-names-generator": "^4.2.0"
   }
 }
