--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@patternfly/react-table": "^4.15.5",
     "@patternfly/react-tokens": "^4.9.4",
     "@reduxjs/toolkit": "^1.3.5",
+    "@sentry/browser": "5.19.1",
     "axios": "^0.19.2",
     "file-saver": "^2.0.2",
     "formik": "^2.1.4",
