--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "scripts": {
     "prebuild": "run-s test",
     "build": "microbundle-crl --no-compress --format modern,cjs --css-modules false",
-    "start": "echo Consider running: yarn sync-to-facet ; echo ; microbundle-crl watch --no-compress --format modern,cjs --css-modules false",
+    "start": "echo Consider running: npm run sync-to-facet ; echo ; microbundle-crl watch --no-compress --format modern,cjs --css-modules false",
     "sync-to-facet": "FACET_ROOT=../facet ./scripts/sync-dist.sh",
     "prepare": "install-peers",
     "test": "run-s test:circular test:lint",
@@ -25,9 +25,9 @@
     "lint": "eslint --ext .js,.jsx,.ts,.tsx --color --fix ./src",
     "prettier": "prettier --write '**/*.{js,jsx,ts,tsx,json,md,scss,yaml,yml}'",
     "update-api": "curl https://raw.githubusercontent.com/openshift/assisted-service/master/swagger.yaml > src/api/swagger.yaml",
-    "postupdate-api": "yarn swagger",
+    "postupdate-api": "npm run swagger",
     "swagger": "sw2dts -w -o src/api/types.ts src/api/swagger.yaml",
-    "postswagger": "sed -i -r 's/([a-z1-9]+)_([a-z])/\\1\\U\\2/g' src/api/types.ts && yarn prettier"
+    "postswagger": "sed -i -r 's/([a-z1-9]+)_([a-z])/\\1\\U\\2/g' src/api/types.ts && npm run prettier"
   },
   "peerDependencies": {
     "@patternfly/patternfly": "^4.10.31",
