--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "facet-lib",
-  "version": "1.0.35",
+  "version": "1.0.35-test",
   "description": "React component library for the Bare Metal Installer",
   "author": "mareklibra",
   "license": "Apache-2.0",
