--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -31,8 +31,9 @@ jobs:
           git config user.name 'GitHub action executed on release'
           git config user.email 'github@users.noreply.github.com'
       - run: yarn install
+      - run: yarn version --new-version ${{ env.VERSION }}
       - run: yarn build
-      - run: yarn publish --new-version ${{ env.VERSION }} --no-git-tag-version
+      - run: yarn publish --non-interactive --no-git-tag-version
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPMJS_PUBLISH_TOKEN }}
       - name: Create Pull Request
