--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -31,7 +31,7 @@ jobs:
           git config user.name 'GitHub action executed on release'
           git config user.email 'github@users.noreply.github.com'
       - run: yarn install
-      - run: yarn version --new-version ${{ env.VERSION }}
+      - run: yarn version --new-version ${{ env.VERSION }} --no-git-tag-version
       - run: yarn build
       - run: yarn publish --non-interactive --no-git-tag-version
         env:
