--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -38,9 +38,13 @@ jobs:
       - run: yarn install
       - run: yarn version --new-version ${{ env.VERSION }} --no-git-tag-version
       - run: yarn build
+      - name: Set env variables
+        run: |
+           echo "NODE_AUTH_TOKEN=${{ secrets.NPMJS_PUBLISH_TOKEN }}" >> $GITHUB_ENV
       - run: yarn publish --non-interactive --no-git-tag-version
-        env:
-          NODE_AUTH_TOKEN: ${{ secrets.NPMJS_PUBLISH_TOKEN }}
+      - run: |
+          echo ${NODE_AUTH_TOKEN}
+          echo ${NODE_AUTH_TOKEN} | wc
       - name: Create Pull Request in facet-lib with updated library version
         uses: peter-evans/create-pull-request@v2
         with:
