--- a/package.json
+++ b/package.json
@@ -44,8 +44,8 @@
     "http-proxy-middleware": "^1.0.3",
     "human-date": "^1.4.0",
     "humanize-plus": "^1.8.2",
+    "ip-address": "^7.1.0",
     "lodash": "^4.17.15",
-    "netmask": "^1.0.6",
     "prism-react-renderer": "^1.1.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
@@ -66,7 +66,6 @@
     "@types/humanize-plus": "^1.8.0",
     "@types/jest": "^25.1.4",
     "@types/lodash": "^4.14.121",
-    "@types/netmask": "^1.0.30",
     "@types/node": "^12.12.38",
     "@types/react-redux": "^7.1.7",
     "@types/react-router-dom": "^5.1.3",
