--- a/package.json
+++ b/package.json
@@ -104,6 +104,7 @@
   "dependencies": {
     "axios-case-converter": "^0.6.0",
     "ip-address": "^7.1.0",
+    "is-cidr": "^4.0.2",
     "is-in-subnet": "^3.1.0",
     "unique-names-generator": "^4.2.0"
   }
