--- a/package.json
+++ b/package.json
@@ -103,6 +103,7 @@
   ],
   "dependencies": {
     "axios-case-converter": "^0.6.0",
+    "filesize.js": "^2.0.0",
     "ip-address": "^7.1.0",
     "is-cidr": "^4.0.2",
     "is-in-subnet": "^3.1.0",
