--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "postswagger": "sed -i -r 's/([a-z1-9]+)_([a-z])/\\1\\U\\2/g' src/api/types.ts && yarn prettier"
   },
   "peerDependencies": {
+    "@patternfly/react-code-editor": "^4.1.25",
     "@patternfly/react-core": "^4.97.2",
     "@patternfly/react-icons": "^4.9.2",
     "@patternfly/react-table": "^4.23.2",
@@ -43,6 +44,7 @@
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
+    "react-tagsinput": "3.19.x",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
     "reselect": "^4.0.0",
@@ -57,10 +59,12 @@
     "@types/human-date": "^1.4.0",
     "@types/humanize-plus": "^1.8.0",
     "@types/jest": "^25.1.4",
+    "@types/js-yaml": "^4.0.1",
     "@types/lodash": "^4.14.121",
     "@types/node": "^12.12.38",
     "@types/react-redux": "^7.1.7",
     "@types/react-router-dom": "^5.1.3",
+    "@types/react-tagsinput": "^3.19.7",
     "@types/uuid": "^8.0.0",
     "@types/yup": "^0.26.9",
     "@typescript-eslint/eslint-plugin": "^2.26.0",
@@ -106,6 +110,7 @@
     "ip-address": "^7.1.0",
     "is-cidr": "^4.0.2",
     "is-in-subnet": "^3.1.0",
+    "js-yaml": "^4.1.0",
     "prism-react-renderer": "^1.1.1",
     "unique-names-generator": "^4.2.0"
   }
