--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "@patternfly/react-icons": "^4.9.2",
     "@patternfly/react-table": "^4.23.2",
     "@patternfly/react-tokens": "^4.10.2",
-    "@reduxjs/toolkit": "^1.3.5",
+    "@reduxjs/toolkit": "1.5.x",
     "@sentry/browser": "5.19.1",
     "axios": "^0.19.2",
     "lodash": "^4.17.15",
