--- a/.github/workflows/mergeToMainBranches.yaml
+++ b/.github/workflows/mergeToMainBranches.yaml
@@ -14,9 +14,11 @@ jobs:
         run: echo "NODE_OPTIONS=--max-old-space-size=8192" >> $GITHUB_ENV
       - name: Check out code
         uses: actions/checkout@v2
-      - uses: actions/setup-node@v1
+      - name: Install dependencies
+        uses: borales/actions-yarn@v2.0.0
         with:
-          node-version: '12.x'
-          registry-url: 'https://registry.npmjs.org'
-      - run: yarn install
-      - run: yarn build
+          cmd: install
+      - name: Build code (includes test)
+        uses: borales/actions-yarn@v2.0.0
+        with:
+          cmd: build
