--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "@types/classnames": "^2.3.1",
     "@types/file-saver": "^2.0.1",
     "@types/human-date": "^1.4.0",
     "@types/humanize-plus": "^1.8.0",
@@ -102,6 +103,7 @@
   ],
   "dependencies": {
     "axios-case-converter": "^0.6.0",
+    "classnames": "^2.3.1",
     "file-saver": "^2.0.2",
     "filesize.js": "^2.0.0",
     "formik": "2.2.6",
