--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
     "reselect": "^4.0.0",
+    "swr": "^0.5.6",
     "uuid": "^8.1.0",
     "yup": "^0.28.3"
   },
