--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "i18next-browser-languagedetector": "^6.1.2",
     "lodash": "^4.17.15",
     "react": "^16.14.0",
+    "react-autosuggest": "^10.1.0",
     "react-dom": "^16.13.1",
     "react-i18next": "^11.11.4",
     "react-redux": "^7.2.0",
@@ -69,6 +70,7 @@
     "@types/js-yaml": "^4.0.1",
     "@types/lodash": "^4.14.121",
     "@types/node": "^12.12.38",
+    "@types/react-autosuggest": "^10.1.5",
     "@types/react-redux": "^7.1.7",
     "@types/react-router-dom": "^5.1.3",
     "@types/react-tagsinput": "^3.19.7",
