--- a/package.json
+++ b/package.json
@@ -45,7 +45,6 @@
     "i18next-browser-languagedetector": "^6.1.2",
     "lodash": "^4.17.15",
     "react": "^16.14.0",
-    "react-autosuggest": "^10.1.0",
     "react-dom": "^16.13.1",
     "react-i18next": "^11.11.4",
     "react-redux": "^7.2.0",
@@ -115,6 +114,7 @@
     "file-saver": "^2.0.2",
     "filesize.js": "^2.0.0",
     "formik": "2.2.6",
+    "fuzzysearch": "^1.0.3",
     "http-proxy-middleware": "^1.0.3",
     "human-date": "^1.4.0",
     "humanize-plus": "^1.8.2",
