--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "react": "^16.14.0",
     "react-dom": "^16.13.1",
     "react-i18next": "^11.11.4",
+    "react-monaco-editor": "0.41.2",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
     "react-tagsinput": "3.19.x",
@@ -124,5 +125,14 @@
     "js-yaml": "^4.1.0",
     "prism-react-renderer": "^1.1.1",
     "unique-names-generator": "^4.2.0"
+  },
+  "jest": {
+    "transformIgnorePatterns": [
+      "node_modules/(?!(react-monaco-editor|monaco-editor))"
+    ],
+    "moduleNameMapper": {
+      "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/__mocks__/fileMock.js",
+      "\\.(css|less)$": "<rootDir>/__mocks__/styleMock.js"
+    }
   }
 }
