--- a/package.json
+++ b/package.json
@@ -115,7 +115,7 @@
     "file-saver": "^2.0.2",
     "filesize.js": "^2.0.0",
     "formik": "2.2.6",
-    "fuzzysearch": "^1.0.3",
+    "fuse.js": "^6.4.6",
     "http-proxy-middleware": "^1.0.3",
     "human-date": "^1.4.0",
     "humanize-plus": "^1.8.2",
