--- a/package.json
+++ b/package.json
@@ -38,23 +38,23 @@
     "@patternfly/react-icons": "^4.11.0",
     "@patternfly/react-table": "^4.29.0",
     "@patternfly/react-tokens": "^4.12.0",
-    "@reduxjs/toolkit": "1.5.x",
+    "@reduxjs/toolkit": "^1.5",
     "@sentry/browser": "5.19.1",
-    "axios": "^0.19.2",
+    "axios": ">=0.19.2 <1.0.0",
     "i18next": "^20.4.0",
     "i18next-browser-languagedetector": "^6.1.2",
     "lodash": "^4.17.15",
-    "react": "^16.14.0",
-    "react-dom": "^16.13.1",
+    "react": "^16.14.0 || ^17.0",
+    "react-dom": "^16.13.1 || ^17.0",
     "react-i18next": "^11.11.4",
-    "react-monaco-editor": "0.41.2",
+    "react-monaco-editor": "^0.43.0",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
     "react-tagsinput": "3.19.x",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
     "reselect": "^4.0.0",
-    "swr": "^0.5.6",
+    "swr": ">=0.5.6 <1.0.0",
     "uuid": "^8.1.0",
     "yup": "^0.28.3"
   },
@@ -111,7 +111,7 @@
     "library"
   ],
   "dependencies": {
-    "axios-case-converter": "^0.6.0",
+    "axios-case-converter": "^0.8.1",
     "classnames": "^2.3.1",
     "file-saver": "^2.0.2",
     "filesize.js": "^2.0.0",
