--- a/package.json
+++ b/package.json
@@ -56,7 +56,7 @@
     "reselect": "^4.0.0",
     "swr": ">=0.5.6 <1.0.0",
     "uuid": "^8.1.0",
-    "yup": "^0.28.3"
+    "yup": ">=0.28.3 <1.0.0"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^4.2.4",
