--- a/package.json
+++ b/package.json
@@ -39,9 +39,9 @@
     "@patternfly/react-table": "^4.29.0",
     "@patternfly/react-tokens": "^4.12.0",
     "@reduxjs/toolkit": "^1.5",
-    "@sentry/browser": "5.19.1",
+    "@sentry/browser": "^5.9 || ^6.0",
     "axios": ">=0.19.2 <1.0.0",
-    "i18next": "^20.4.0",
+    "i18next": "^20.4.0 || ^21.0",
     "i18next-browser-languagedetector": "^6.1.2",
     "lodash": "^4.17.15",
     "react": "^16.14.0 || ^17.0",
@@ -54,7 +54,7 @@
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
     "reselect": "^4.0.0",
-    "swr": ">=0.5.6 <1.0.0",
+    "swr": ">=0.5.6 <2",
     "uuid": "^8.1.0",
     "yup": "^0.28.3"
   },
