--- a/.github/workflows/pullRequest.yaml
+++ b/.github/workflows/pullRequest.yaml
@@ -26,6 +26,6 @@ jobs:
         # --slient: Run yarn install without printing installation log.
         # --non-interactive: disable interactive prompts, like when there’s an invalid version of a dependency.
         # --pure-lockfile: doesn't generate a yarn.lock file.
-        run: yarn install --silen --non-interactive --frozen-lockfile
+        run: yarn install --silent --non-interactive --pure-lockfile
       - name: Build code (includes tests)
         run: yarn build
