--- a/package.json
+++ b/package.json
@@ -82,6 +82,7 @@
     "eslint-plugin-react-hooks": "^2.5.0",
     "install-peers-cli": "^2.2.0",
     "microbundle-crl": "^0.13.10",
+    "msw": "^0.35.0",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.0.4",
     "react-scripts": "^4.0.3",
