--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "test:type-check": "tsc --noEmit",
     "test:lint": "eslint --ext .js,.jsx,.ts,.tsx --color --max-warnings=0 ./src",
     "test:unit": "cross-env CI=1 react-scripts test --env=jsdom",
-    "test:circular": "dpdm --warning false --tree false src/index.ts | grep 'no circular dependency were found'",
+    "test:circular": "dpdm --exit-code circular:1 --warning false --tree false src/index.ts",
     "test:watch": "react-scripts test --env=jsdom",
     "lint": "eslint --ext .js,.jsx,.ts,.tsx --color --fix ./src",
     "prettier": "prettier --write '**/*.{js,jsx,ts,tsx,json,md,scss,yaml,yml}'",
@@ -74,7 +74,7 @@
     "concurrently": "^5.3.0",
     "console-sdk-ai-lib": "0.0.1",
     "cross-env": "^7.0.2",
-    "dpdm": "^3.4.3",
+    "dpdm": "^3.8.0",
     "env-cmd": "^10.1.0",
     "eslint-config-prettier": "^6.10.1",
     "eslint-plugin-prettier": "^3.1.2",
