--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "unique-names-generator": "^4.2.0"
   },
   "devDependencies": {
+    "@babel/eslint-parser": "^7.14.7",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.2.1",
@@ -67,17 +68,25 @@
     "@types/react-tagsinput": "^3.19.7",
     "@types/uuid": "^8.0.0",
     "@types/yup": "^0.26.9",
-    "@typescript-eslint/eslint-plugin": "^2.26.0",
-    "@typescript-eslint/parser": "^2.26.0",
+    "@typescript-eslint/eslint-plugin": "^4.0.0",
+    "@typescript-eslint/parser": "^4.0.0",
+    "babel-preset-react-app": "^10.0.0",
     "concurrently": "^5.3.0",
     "console-sdk-ai-lib": "0.0.1",
     "cross-env": "^7.0.2",
     "dpdm": "^3.8.0",
     "env-cmd": "^10.1.0",
+    "eslint": "^7.5.0",
     "eslint-config-prettier": "^6.10.1",
+    "eslint-config-react-app": "^6.0.0",
+    "eslint-plugin-flowtype": "^5.2.0",
+    "eslint-plugin-import": "^2.22.0",
+    "eslint-plugin-jest": "^24.0.0",
+    "eslint-plugin-jsx-a11y": "^6.3.1",
     "eslint-plugin-prettier": "^3.1.2",
-    "eslint-plugin-react": "^7.19.0",
-    "eslint-plugin-react-hooks": "^2.5.0",
+    "eslint-plugin-react": "^7.20.3",
+    "eslint-plugin-react-hooks": "^4.0.8",
+    "eslint-plugin-testing-library": "^3.9.0",
     "install-peers-cli": "^2.2.0",
     "microbundle-crl": "^0.13.10",
     "msw": "^0.35.0",
