--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
   "scripts": {
     "clean": "rm -rf dist/*",
     "prebuild": "run-s clean test",
-    "build": "microbundle-crl --no-compress --format modern,cjs --css-modules false",
-    "start": "microbundle-crl watch --no-compress --format modern,cjs --css-modules false",
+    "build": "microbundle build --jsx React.createElement --no-compress --format modern,cjs --css-modules false",
+    "start": "microbundle watch --jsx React.createElement --no-compress --format modern,cjs --css-modules false",
     "start-assisted-ui": "env-cmd ./scripts/start-assisted-ui.sh",
     "start-uhc-portal": "./scripts/start-uhc-portal.sh",
     "sync-to-ui": "./scripts/sync-dist.sh",
@@ -88,7 +88,7 @@
     "eslint-plugin-react-hooks": "^4.0.8",
     "eslint-plugin-testing-library": "^3.9.0",
     "install-peers-cli": "^2.2.0",
-    "microbundle-crl": "^0.13.10",
+    "microbundle": "^0.14.0",
     "msw": "^0.35.0",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.0.4",
