--- a/.github/workflows/test_and_build.yaml
+++ b/.github/workflows/test_and_build.yaml
@@ -31,9 +31,17 @@ jobs:
           node-version: '>=12.16'
           cache: yarn
       - name: Install dependencies
-        # --slient: Run yarn install without printing installation log.
+        # --silent: Run yarn install without printing installation log.
         # --non-interactive: disable interactive prompts, like when there’s an invalid version of a dependency.
         # --pure-lockfile: doesn't generate a yarn.lock file.
         run: yarn install --silent --non-interactive --pure-lockfile
+      - name: Check for cyclic dependencies
+        run: yarn test:cyclic
+      - name: Perform typechecking
+        run: yarn test:type-check
+      - name: Lint
+        run: yarn test:lint
+      - name: Test
+        run: yarn test:ci
       - name: Build code (includes tests)
         run: yarn build
