--- a/package.json
+++ b/package.json
@@ -4,28 +4,29 @@
   "description": "React component library for the Bare Metal Installer",
   "license": "Apache-2.0",
   "repository": "openshift-assisted/assisted-ui-lib",
-  "main": "dist/index.js",
-  "module": "dist/index.modern.js",
-  "source": "src/index.ts",
-  "types": "dist/src/index.d.ts",
+  "source": "./src/index.ts",
+  "exports": "./dist/index.modern.js",
+  "main": "./dist/index.js",
+  "module": "./dist/index.modern.js",
+  "types": "./dist/src/index.d.ts",
   "engines": {
     "node": ">=12.16"
   },
   "scripts": {
-    "clean": "rm -rf dist/*",
-    "prebuild": "run-s clean test",
+    "clean": "yarn rimraf dist/*",
+    "build:aio": "run-s clean test:aio",
     "build": "microbundle build --jsx React.createElement --no-compress --format modern,cjs --css-modules false",
-    "start": "microbundle watch --jsx React.createElement --no-compress --format modern,cjs --css-modules false",
-    "start-assisted-ui": "env-cmd ./scripts/start-assisted-ui.sh",
-    "start-uhc-portal": "./scripts/start-uhc-portal.sh",
-    "sync-to-ui": "./scripts/sync-dist.sh",
+    "start": "env-cmd -f .env.local microbundle watch --jsx React.createElement --no-compress --format modern --css-modules false",
+    "start:assisted-ui": "env-cmd -f .env.local ./scripts/start-assisted-ui.sh",
+    "start:uhc-portal": "./scripts/start-uhc-portal.sh",
+    "sync-dist": "./scripts/sync-dist.sh",
     "prepare": "install-peers",
-    "test": "run-s test:circular test:lint",
+    "test:aio": "run-s test:circular test:lint test:type-check test:ci",
     "test:type-check": "tsc --noEmit",
     "test:lint": "eslint --ext .js,.jsx,.ts,.tsx --color --max-warnings=0 ./src",
-    "test:unit": "cross-env CI=1 react-scripts test --env=jsdom",
+    "test:ci": "yarn test --watchAll=false",
     "test:circular": "dpdm --exit-code circular:1 --warning false --tree false src/index.ts",
-    "test:watch": "react-scripts test --env=jsdom",
+    "test": "react-scripts test --env=jsdom",
     "lint": "eslint --ext .js,.jsx,.ts,.tsx --color --fix ./src",
     "format": "prettier --write '**/*.{js,jsx,ts,tsx,json,md,scss,yaml,yml}'",
     "update-api": "curl https://raw.githubusercontent.com/openshift/assisted-service/master/swagger.yaml > src/common/api/swagger.yaml",
@@ -88,6 +89,7 @@
     "eslint-plugin-react-hooks": "^4.0.8",
     "eslint-plugin-testing-library": "^3.9.0",
     "install-peers-cli": "^2.2.0",
+    "jest-mock-console": "^1.2.3",
     "microbundle": "^0.14.0",
     "msw": "^0.35.0",
     "npm-run-all": "^4.1.5",
