--- a/package.json
+++ b/package.json
@@ -38,18 +38,17 @@
     "start-uhc-portal": "./scripts/start-uhc-portal.sh",
     "sync-to-ui": "./scripts/sync-dist.sh",
     "prepare": "install-peers",
-    "test": "run-s test:circular test:lint",
     "test:type-check": "tsc --noEmit",
     "test:lint": "eslint --ext .js,.jsx,.ts,.tsx --color --max-warnings=0 ./src",
-    "test:unit": "cross-env CI=1 react-scripts test --env=jsdom",
-    "test:circular": "dpdm --warning false --tree false src/index.ts | grep 'no circular dependency were found'",
-    "test:watch": "react-scripts test --env=jsdom",
+    "test:ci": "yarn test --watchAll=false --ci --runInBand",
+    "test:circular": "dpdm --exit-code circular:1 --warning false --tree false src/index.ts",
+    "test": "react-scripts test --env=jsdom",
     "lint": "eslint --ext .js,.jsx,.ts,.tsx --color --fix ./src",
-    "prettier": "prettier --write '**/*.{js,jsx,ts,tsx,json,md,scss,yaml,yml}'",
+    "format": "prettier --write '**/*.{js,jsx,ts,tsx,json,md,scss,yaml,yml}'",
     "update-api": "curl https://raw.githubusercontent.com/openshift/assisted-service/master/swagger.yaml > src/common/api/swagger.yaml",
     "postupdate-api": "yarn swagger",
     "swagger": "sw2dts -w -o src/common/api/types.ts src/common/api/swagger.yaml",
-    "postswagger": "sed -i -r 's/([a-z1-9]+)_([a-z])/\\1\\U\\2/g' src/common/api/types.ts && yarn prettier"
+    "postswagger": "sed -i -r 's/([a-z1-9]+)_([a-z])/\\1\\U\\2/g' src/common/api/types.ts && yarn format"
   },
   "peerDependencies": {
     "@patternfly/react-code-editor": "^4.2.92",
@@ -97,32 +96,65 @@
     "@types/react-tagsinput": "^3.19.7",
     "@types/uuid": "^8.0.0",
     "@types/yup": "^0.26.9",
-    "@typescript-eslint/eslint-plugin": "^2.26.0",
-    "@typescript-eslint/parser": "^2.26.0",
-    "babel-eslint": "^10.0.3",
+    "@typescript-eslint/eslint-plugin": "^4.0.0",
+    "@typescript-eslint/parser": "^4.0.0",
+    "babel-preset-react-app": "^10.0.0",
     "concurrently": "^5.3.0",
     "console-sdk-ai-lib": "0.0.1",
     "cross-env": "^7.0.2",
-    "dpdm": "^3.4.3",
+    "dpdm": "^3.8.0",
     "env-cmd": "^10.1.0",
     "esbuild": "^0.13.9",
     "eslint": "^6.8.0",
     "eslint-config-prettier": "^6.10.1",
-    "eslint-plugin-cypress": "^2.10.3",
+    "eslint-config-react-app": "^6.0.0",
+    "eslint-plugin-flowtype": "^5.2.0",
+    "eslint-plugin-import": "^2.22.0",
+    "eslint-plugin-jest": "^24.0.0",
+    "eslint-plugin-jsx-a11y": "^6.3.1",
     "eslint-plugin-prettier": "^3.1.2",
-    "eslint-plugin-react": "^7.19.0",
-    "eslint-plugin-react-hooks": "^2.5.0",
+    "eslint-plugin-react": "^7.20.3",
+    "eslint-plugin-react-hooks": "^4.0.8",
+    "eslint-plugin-testing-library": "^3.9.0",
     "install-peers-cli": "^2.2.0",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.0.4",
-    "react-scripts": "^3.4.1",
+    "react-scripts": "^4.0.3",
     "redux-devtools-extension": "^2.13.8",
     "rimraf": "^3.0.2",
     "sw2dts": "^2.6.3",
     "typescript": "^3.8.3"
   },
+  "peerDependencies": {
+    "@patternfly/react-code-editor": "^4.2.92",
+    "@patternfly/react-core": "^4.135.0",
+    "@patternfly/react-icons": "^4.11.0",
+    "@patternfly/react-table": "^4.29.0",
+    "@patternfly/react-tokens": "^4.12.0",
+    "@reduxjs/toolkit": "^1.5",
+    "@sentry/browser": "^5.9 || ^6.0",
+    "axios": ">=0.19.2 <1.0.0",
+    "i18next": "^20.4.0 || ^21.0",
+    "i18next-browser-languagedetector": "^6.1.2",
+    "lodash": "^4.17.15",
+    "react": "^16.14.0 || ^17.0",
+    "react-dom": "^16.13.1 || ^17.0",
+    "react-i18next": "^11.11.4",
+    "react-monaco-editor": "^0.43.0",
+    "react-redux": "^7.2.0",
+    "react-router-dom": "^5.1.2",
+    "react-tagsinput": "3.19.x",
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0",
+    "reselect": "^4.0.0",
+    "swr": ">=0.5.6 <2",
+    "uuid": "^8.1.0",
+    "yup": "^0.28.3"
+  },
   "files": [
-    "dist"
+    "cim",
+    "ocm",
+    "common"
   ],
   "keywords": [
     "react",
