--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,12 +1,18 @@
 {
   "compilerOptions": {
-    "outDir": "dist",
+    "outDir": "./dist",
+    "lib": [
+      "dom",
+      "dom.iterable",
+      "esnext"
+    ],
+    "target": "esnext",
     "module": "esnext",
-    "lib": ["dom", "esnext"],
     "moduleResolution": "node",
-    "jsx": "preserve",
+    "jsx": "react",
     "sourceMap": true,
     "declaration": true,
+    "declarationDir": "./dist",
     "esModuleInterop": true,
     "noImplicitReturns": false,
     "noImplicitThis": true,
@@ -16,7 +22,6 @@
     "noUnusedLocals": false,
     "noUnusedParameters": false,
     "allowSyntheticDefaultImports": true,
-    "target": "es5",
     "allowJs": true,
     "skipLibCheck": true,
     "strict": true,
