--- a/package.json
+++ b/package.json
@@ -116,6 +116,7 @@
     "eslint-plugin-react": "^7.20.3",
     "eslint-plugin-react-hooks": "^4.0.8",
     "eslint-plugin-testing-library": "^3.9.0",
+    "faker": "^5.5.3",
     "install-peers-cli": "^2.2.0",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.0.4",
